--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,7 @@
 PORT = 5000
 NODE_ENV = development
 CLIENT_URL = http://localhost:3000
+# Database
+HOST = localhost
+DBPORT = 27017
+DBNAME = socialnetwork
